--- a/client/assets/style/main.css
+++ b/client/assets/style/main.css
@@ -5,6 +5,26 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+.vertically-align{
+  vertical-align: text-top!important;
+}
+/* 
+.profile-height{
+  height: 100vh;
+} */
+
+.game-height{
+  height: 20vh;
+}
+
+.postition{
+  position: absolute;
+}
+
+.game-column-height{
+  height: 16vh;
+}
+
 :root {
   --blue: blue;
   --indigo: indigo;
